--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Hacker-Blog
-description: "A Jekyll Blog Theme For Hackers"
+title: 个人博客
+description: "韩沛龙的个人博客"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  name: "longz7z8"
+  email: "hanpeilong121010@126.com"
+  url: "https://www.longz7z8.com.cn/"
 
 baseurl: /
 
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "韩沛龙"
+year : "2022"
