--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 个人博客
-description: "韩沛龙的个人博客"
+title: 软件下载
+description: "韩沛龙的个人博客软件区"
 author:
   name: "longz7z8"
   email: "hanpeilong121010@126.com"
